--- a/src/tello_target_tracker/package.xml
+++ b/src/tello_target_tracker/package.xml
@@ -12,6 +12,7 @@
   <depend>rclpy</depend>
   <depend>geometry_msgs</depend>
   <depend>std_msgs</depend>
+  <depend>std_srvs</depend>
   <depend>tello_interfaces</depend>
 
   <test_depend>ament_copyright</test_depend>
